# ni-neutrino

./: .gitignore  README.md  acinclude.m4  autogen.sh  autorun.sh  configure.ac  version_pseudo.h
data/: Makefile.am  settingsupdate.conf
data/config/: Makefile.am  bad_package_pattern.list.sample  satellites.xml  settingsupdate.conf  settingsupdate.conf.in  softcsa.conf.sample  tobackup.conf
data/control/: Makefile.am  flash.start  migration.sh
data/fonts/: Makefile.am
data/icons/: Makefile.am
data/icons/buttons/: Makefile.am
data/icons/headers/: Makefile.am
data/icons/hints/: Makefile.am
data/icons/hourglass/: Makefile.am
data/icons/locale/: Makefile.am
data/icons/screensaver/: Makefile.am
data/icons/status/: Makefile.am
data/icons/status/ca/: Makefile.am
data/icons/status/camd/: Makefile.am
data/icons/status/info/: Makefile.am
data/icons/status/progress/: Makefile.am
data/icons/various/: Makefile.am
data/inetradio/: Makefile.am  radio-favorites.xml  radio-stations.xml
data/initial/: Makefile.am  services.xml  ubouquets.xml
data/iso-codes/: iso-639.tab
data/locale/: Makefile.am  create-locale  deutsch.locale  english.locale  nederlands.locale  slovak.locale
data/locale/helpers/: create-locale-work
data/logos/: Makefile.am
data/luaplugins/: nlab.lua
data/neutrino-scripts/: Makefile.am  flash.start  migration.sh  ni-migration.sh
data/pictures/backgrounds/: Makefile.am
data/pictures/backgrounds/1280x720/: bootlogo.m2v
data/pictures/screensaver/: Makefile.am
data/policy/: Makefile.am
data/scripts/: Makefile.am  backup.sh  backup.sh.in  backup_flash.sh  backup_flash.sh.in  migration.sh.in  ntp-helper.sh  restore.sh.in  start_flash.sh  wakeup.sh
data/themes/: AdulteratedOrange.theme  DarkOrange.theme  Gray.theme  Grey-3.0.theme  Grey.theme  Makefile.am  Material_Blue-Grey.theme  Material_Blue-Grey.theme.in  Material_Grey_(Dark).theme  Material_Grey_(Dark)_Orange.theme  Material_Grey_(Light).theme  Material_Grey_(Medium).theme  Red.theme
data/webradio/: Makefile.am
data/webtv/: Makefile.am  filmon.xml
data/y-web/: Makefile.am  Y_About.yhtm  Y_About_Image.yhtm  Y_About_yWeb.yhtm  Y_Baselib.js  Y_Blank.yhtm  Y_Blocks.txt  Y_Blocks_Neutrino.txt  Y_Boxcontrol_Bouquet_Editor_Edit.yhtm  Y_Boxcontrol_Bouquet_Editor_Main.yhtm  Y_Boxcontrol_Bouquetlist.yhtm  Y_Boxcontrol_Bouquets.yhtm  Y_Boxcontrol_Channellist.yhtm  Y_Boxcontrol_Menue.yhtm  Y_Boxcontrol_Messages.yhtm  Y_Boxcontrol_PZapit.yhtm  Y_EPG.js  Y_EPG.js.jQuery  Y_EPG_Plus.yhtm  Y_Ext_Menue.yhtm  Y_Ext_Settings.yhtm  Y_Ext_Uninstall.yhtm  Y_Ext_Update.js  Y_Ext_Update.yhtm  Y_Ext_Update_refresh.yhtm  Y_Filemgr.yhtm  Y_Filemgr_Edit.yhtm  Y_Info_Help.yhtm  Y_Info_Menue.yhtm  Y_Info_Updates.yhtm  Y_Infopage.yhtm  Y_Live_EPG.yhtm  Y_Live_EPG_Info.yhtm  Y_Main.css  Y_Menue.yhtm  Y_NI.css  Y_NI_About.yhtm  Y_NI_Blocks.txt  Y_NI_Camd-control.yhtm  Y_NI_Dyn_Pages.yhtm  (+62 more)
data/y-web/extentions/boxinfo/files/httpd/scripts/: Y_Ext_BoxInfo.sh
data/y-web/images/: Makefile.am
data/y-web/images/rc/: Makefile.am
data/y-web/info/: Makefile.am  index.html  manifest.json  yinfo.yhtm
data/y-web/jquery/: Makefile.am
data/y-web/languages/: Czech  Deutsch  English  Makefile.am  Polski  Portuguese  Slovak
data/y-web/lcd4linux/: index.html  manifest.json  ylcd4linux.yhtm
data/y-web/prototype/: Makefile.am
data/y-web/scripts/: Makefile.am  Y_NAS.sh  Y_NI_Camd-control.sh  Y_NI_Plugin-control.sh  Y_NI_Tools.sh  Y_Tools.sh  _Y_Globals.sh  _Y_Library.sh  api.sh
data/y-web/styles/: Makefile.am  Y_Dist-GreyBlue.css  Y_Dist-NI_dark.css
data/zapit/: myservices.xml
lib/: Makefile.am
lib/hardware/coolstream/: hardware_caps.cpp  hardware_caps.h
lib/hardware/coolstream/hd2/libcoolstream/: video_cs.h
lib/libcoolstream/: Makefile.am  hardware_caps.cpp  hardware_caps.h
lib/libcoolstream2/: Makefile.am  cs_frontpanel.h  hardware_caps.cpp  hardware_caps.h
lib/libdvbsub/: dvbsub.cpp  dvbsubtitle.cpp  dvbsubtitle.h
lib/libtuxtxt/: tuxtxt.cpp  tuxtxt.h  tuxtxt_common.h
lib/libtuxtxt_mp/: tuxtxt.cpp  tuxtxt.h  tuxtxt_common.h
lib/timerdclient/: timerdclient.cpp  timerdclient.h  timerdtypes.h
src/: Makefile.am  global.h  mdev_helper.cpp  mymenu.h  neutrino.cpp  neutrino.h  neutrino_menue.cpp  neutrino_menue.h  nosanitize.h  plugin.h
src/daemonc/: Makefile.am  remotecontrol.cpp
src/driver/: Makefile.am  audiometadata.cpp  audiometadata.h  audioplay.cpp  display.h  fb_accel.h  fb_accel_arm.cpp  fb_accel_cs_apollo.cpp  fb_accel_cs_hd1.cpp  fb_accel_cs_hd2.cpp  fb_accel_cs_hdx.cpp  fb_accel_cs_nevis.cpp  fb_accel_glfb.cpp  fb_accel_sti.cpp  fb_generic.cpp  fb_generic.h  fbaccel.cpp  fbaccel.h  fontrenderer.cpp  framebuffer.cpp  framebuffer.h  framebuffer_ng.cpp  framebuffer_ng.h  genpsi.cpp  genpsi.h  hdmi_cec.cpp  hdmi_cec.h  hdmi_cec_types.h  lcd4l.cpp  lcd4l.h  lcdd.h  linux-uapi-cec.h  netfile.cpp  rcinput.cpp  rcinput.h  record.cpp  record.h  scanepg.cpp  screenshot.cpp  screenshot.h  (+6 more)
src/driver/softcsa/: Makefile.am  pes_ringbuffer.cpp  pes_ringbuffer.h  softcsa_config.cpp  softcsa_config.h  softcsa_dvr_demux_slot.cpp  softcsa_dvr_demux_slot.h  softcsa_engine.cpp  softcsa_engine.h  softcsa_manager.cpp  softcsa_manager.h  softcsa_output_fd_set.cpp  softcsa_output_fd_set.h  softcsa_session.cpp  softcsa_session.h  softcsa_tap_reader.cpp  softcsa_tap_reader.h  ts_demuxer.cpp  ts_demuxer.h
src/eitd/: SIevents.hpp  dmx.h  eitd.h  sectionsd.cpp  xmlutil.cpp
src/gui/: Makefile.am  audio_select.cpp  audioplayer.cpp  audioplayer.h  audioplayer_setup.cpp  bookmarkmanager.cpp  bouquetlist.cpp  buildinfo.cpp  cam_menu.cpp  cec_setup.cpp  channellist.cpp  color.h  color_custom.h  daemon_control.cpp  daemon_control.h  dboxinfo.cpp  epgplus.cpp  epgview.cpp  epgview.h  eventlist.cpp  filebrowser.cpp  filebrowser.h  followscreenings.cpp  followscreenings.h  glcdsetup.cpp  glcdthemes.cpp  hdd_info.cpp  hdd_info.h  hdd_menu.cpp  imageinfo.cpp  imageinfo.h  imageinfo_ni.cpp  imdb.cpp  (+91 more)
src/nhttpd/web/scripts/: Makefile.am  Y_NI_Camd-control.sh  Y_NI_Plugin-control.sh  Y_NI_Tools.sh  Y_Tools.sh
(+199 files in other folders)
