SUBDIRS = \
	config \
	control \
	fonts \
	icons \
	inetradio \
	initial \
	iso-codes \
	license \
	locale \
	pictures \
	policy \
	scripts \
	themes \
	weather \
	webradio \
	webtv \
	y-web \
	zapit

if ENABLE_LUA
SUBDIRS += \
	luaplugins
endif

if ENABLE_LCD4LINUX
SUBDIRS += \
	lcd4l
endif

if ENABLE_GRAPHLCD
SUBDIRS += \
	oled
endif
