SUBDIRS = \
	buttons \
	filetypes \
	headers \
	hints \
	locale \
	movieplayer \
	radar \
	slider \
	status \
	various

#NI
SUBDIRS += screensaver

installdir = $(ICONSDIR)

install_DATA = \
	clock_face.png \
	hint_blank_screen.png \
	hint_hdd_info.png \
	hint_iconsPKG0.png \
	hint_iconsPKG1.png \
	hint_iconsPKG2.png \
	hint_iconsPKG3.png \
	hint_imagelogo.png \
	hint_vtxt.png \
	imdb.png \
	progressbar.png \
	progressbar_inactive_passive.png \
	progressbar_passive.png \
	stars.png \
	stars_bg.png \
	volumebar.png \
	volumebar_passive.png

# NI Infoicons
install_DATA += \
	info0_off.png \
	info0_on.png \
	info1_off.png \
	info1_on.png \
	info2_off.png \
	info2_on.png \
	info3_off.png \
	info3_on.png
