installdir = $(THEMESDIR)

SUBDIRS = \
	Grey-Blue/icons/buttons \
	Neutrino-3.0/icons/buttons \
	Olive-3.0/icons/buttons

install_DATA = \
	AdulteratedOrange.theme \
	Bluemoon-3.0.theme \
	Classic.theme \
	Crema.theme \
	DVB2000.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	DarkOrange.theme \
	Gray.theme \
	Grey-Blue.theme \
	Material_Blue-Grey.theme \
	Material_Grey_(Dark).theme \
	Material_Grey_(Light).theme \
	Material_Grey_(Medium).theme \
	MonoChrom.theme \
	Neutrino-3.0.theme \
	Olive.theme \
	Olive-3.0.theme \
	Origin.theme \
	Red.theme \
	VirginMedia.theme
