SUBDIRS = rc

installdir = $(PRIVATE_HTTPDDIR)/images

install_DATA = \
	accept.png \
	alert.gif \
	arrowdown.png \
	arrowleft.png \
	arrowright.png \
	arrowup.png \
	blank.png \
	cancel.png \
	check_green.png \
	colored_bar.png \
	comment.png \
	cross.png \
	elist.png \
	exlink.gif \
	fb.png \
	hidden.png \
	info.png \
	inlink.gif \
	key.png \
	live.png \
	lock.png \
	modify.png \
	new.png \
	ok.gif \
	popup.png \
	properties.png \
	radio.png \
	record.png \
	reload.png \
	remove.png \
	rename.gif \
	save.png \
	saveall.png \
	server_add.png \
	server_delete.png \
	server_edit.png \
	server_link.png \
	snapshot.png \
	stream.png \
	streaminfo.png \
	time_add.png \
	time_down.png \
	time_up.png \
	tux-yweb.png \
	unlock.png \
	visible.png \
	vlc.png \
	volumebar.png \
	volumedown.png \
	volumemute.png \
	volumeunmute.png \
	volumeup.png \
	wait.gif \
	webtv.png \
	wget.png \
	x_red.png \
	zap.png

# file manager
install_DATA += \
	chmod.png \
	copy.gif \
	cut.png \
	dir_up.png \
	download.png \
	film.png \
	folder_add.png \
	ftype_file.png \
	ftype_folder.png \
	ftype_link.png \
	home.png \
	package.png \
	page_edit.png \
	paste.gif \
	picture.png \
	text.png \
	upload.png \
	work.gif

# extensions
install_DATA += \
	ext_add.png \
	ext_delete.png \
	ext_edit.png \
	ext_error.png \
	ext_ex.png \
	ext_menu.png \
	ext_mgr.png \
	ext_normal.png \
	ext_plugin.png \
	ext_script.png
