installdir = $(PRIVATE_HTTPDDIR)/info

install_DATA = \
	index.html \
	yinfo.yhtm

install_DATA +=	\
	android-chrome-192x192.png \
	android-chrome-512x512.png \
	apple-touch-icon.png \
	browserconfig.xml \
	favicon-16x16.png \
	favicon-32x32.png \
	favicon.ico \
	manifest.json \
	mstile-150x150.png \
	safari-pinned-tab.svg
