installdir = $(ICONSDIR)

install_DATA = \
	cccam_green.png \
	ci+_green.png \
	ci+_grey.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	doscam_green.png \
	doscam_yellow.png \
	gbox_green.png \
	mgcamd_green.png \
	ncam_green.png \
	ncam_yellow.png \
	oscam_green.png \
	oscam_yellow.png \
	osmod_green.png \
	osmod_yellow.png
