installdir = $(PRIVATE_HTTPDDIR)/images/rc

install_DATA = \
	rc_cst_v1.jpg \
	rc_cst_v2.png \
	rc_cst_v3.png \
	rc_cst_v4.png \
	rc_cst_v5.png \
	rc_cst_v6.png \
	rc_dbox_nokia_old.png \
	rc_dbox_philips.png

if ! BOXTYPE_CST
install_DATA += \
	rc_ax_hd51.png \
	rc_ax_hd61.png \
	rc_axas_e4hd.png \
	rc_mutant_hd51.png \
	rc_mutant_hd60.png \
	rc_osmio4k.png \
	rc_protek_4k_uhd.png \
	rc_vuplus.png \
	rc_wwio_bre2ze4k.png \
	rc_zgemma_h7.png
endif
